deploy/openshift/jstore-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: cnes-jstore
  labels:
    app: cnes-jstore
    app.kubernetes.io/component: cnes-jstore
    app.kubernetes.io/instance: cnes-jstore
    app.kubernetes.io/name: cnes-jstore
    app.kubernetes.io/part-of: cnes
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-11-ubi8
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: cnes-jstore
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
